@@ -17,6 +17,7 @@ from trytond.modules.offered_insurance.tests.tools import \
 from trytond.modules.party_cog.tests.tools import create_party_person
 from trytond.modules.contract.tests.tools import add_quote_number_generator
 from trytond.modules.country_cog.tests.tools import create_country
+from trytond.modules.premium.tests.tools import add_premium_rules
 
 # #Comment# #Create Database
 # config = config.set_trytond()
@@ -56,17 +57,55 @@ fiscalyear.click('create_period')
 _ = create_chart(company)
 accounts = get_accounts(company)
 
+# #Comment# #Create Broker Fee Account
+AccountKind = Model.get('account.account.type')
+broker_fee_kind = AccountKind()
+broker_fee_kind.name = 'Broker Fee Account Kind'
+broker_fee_kind.company = company
+broker_fee_kind.save()
+Account = Model.get('account.account')
+broker_fee_account = Account()
+broker_fee_account.name = 'Broker Fee Account'
+broker_fee_account.code = 'broker_fee_account'
+broker_fee_account.kind = 'revenue'
+broker_fee_account.party_required = True
+broker_fee_account.type = broker_fee_kind
+broker_fee_account.company = company
+broker_fee_account.save()
+
+# #Comment# #Create Broker Fee
+Product = Model.get('product.product')
+Template = Model.get('product.template')
+template = Template()
+template.name = 'Broker Fee Template'
+template.account_revenue = broker_fee_account
+template.save()
+product = Product()
+product.name = 'Broker Fee Product'
+product.template = template
+product.save()
+Fee = Model.get('account.fee')
+broker_fee = Fee()
+broker_fee.name = 'Broker Fee'
+broker_fee.code = 'broker_fee'
+broker_fee.frequency = 'once_per_contract'
+broker_fee.type = 'fixed'
+broker_fee.amount = Decimal('20.0')
+broker_fee.product = product
+broker_fee.broker_fee = True
+broker_fee.save()
+
 # #Comment# #Create Product
 product = init_product()
 product = add_quote_number_generator(product)
+product = add_premium_rules(product)
 product = add_invoice_configuration(product, accounts)
 product = add_insurer_to_product(product)
+product.fees.append(broker_fee)
 product.save()
 
 # #Comment# #Create commission product
 Uom = Model.get('product.uom')
-Template = Model.get('product.template')
-Product = Model.get('product.product')
 unit, = Uom.find([('name', '=', 'Unit')])
 commission_product = Product()
 template = Template()
@@ -144,28 +183,66 @@ contract.company = company
 contract.subscriber = subscriber
 contract.start_date = contract_start_date
 contract.product = product
-contract.status = 'active'
-contract.options[0].premiums.append(ContractPremium(start=contract_start_date,
-        amount=Decimal('100'), frequency='monthly',
-        account=accounts['revenue'], rated_entity=Coverage(coverage)))
 contract.billing_informations.append(BillingInformation(date=None,
         billing_mode=product.billing_modes[0],
         payment_term=product.billing_modes[0].allowed_payment_terms[0]))
 contract.contract_number = '123456789'
 contract.agent = agent_broker
 contract.save()
+Wizard('contract.activate', models=[contract]).execute('apply')
 
 # #Comment# #Create invoice
 ContractInvoice = Model.get('contract.invoice')
 Contract.first_invoice([contract.id], config.context)
 first_invoice, = ContractInvoice.find([('contract', '=', contract.id)])
-first_invoice.invoice.total_amount
-# #Res# #Decimal('100.00')
+first_invoice.invoice.total_amount == Decimal('120')
+# #Res# #True
+set([(x.amount, x.account.code) for x in first_invoice.invoice.lines]) == set([
+        (Decimal('20'), u'broker_fee_account'),
+        (Decimal('100'), None)])
+# #Res# #True
 
 # #Comment# #Post Invoice
 first_invoice.invoice.click('post')
-line, = first_invoice.invoice.lines
+line = first_invoice.invoice.lines[1]
 len(line.commissions)
 # #Res# #2
-[(x.amount, x.agent.party.name) for x in line.commissions]
-# #Res# #[(Decimal('10.0000'), u'Broker'), (Decimal('60.0000'), u'Insurer')]
+set([(x.amount, x.agent.party.name) for x in line.commissions]) == set([
+    (Decimal('10'), u'Broker'), (Decimal('60'), u'Insurer')])
+# #Res# #True
+
+# #Comment# #Credit invoice
+credit = Wizard('account.invoice.credit', [first_invoice.invoice])
+credit.form.with_refund = True
+credit.execute('credit')
+
+# #Comment# #Create commission invoice
+Invoice = Model.get('account.invoice')
+create_invoice = Wizard('commission.create_invoice')
+create_invoice.form.from_ = None
+create_invoice.form.to = None
+create_invoice.execute('create_')
+invoice, = Invoice.find([('type', '=', 'in_invoice')])
+invoice.description = 'first'
+invoice.save()
+invoice.total_amount == Decimal('30')
+# #Res# #True
+len(invoice.lines[1].broker_fee_lines)
+# #Res# #1
+
+# #Comment# #Cancel Invoice
+Contract.first_invoice([contract.id], config.context)
+first_invoice.invoice.state
+# #Res# #u'cancel'
+
+# #Comment# #Create commission invoice
+Invoice = Model.get('account.invoice')
+create_invoice = Wizard('commission.create_invoice')
+create_invoice.form.from_ = None
+create_invoice.form.to = None
+create_invoice.execute('create_')
+invoices = Invoice.find([('type', '=', 'in_invoice')])
+invoices[0].total_amount == Decimal('-30')
+# #Res# #True
+len(invoices[0].lines[1].broker_fee_lines)
+# #Res# #1
