@@ -14,3 +14,5 @@ xml:
     commission.xml
     party.xml
     payment.xml
+    account.xml
+    invoice.xml
