@@ -1,0 +1,7 @@
+<?xml version="1.0"?>
+<data>
+    <xpath expr="/form/field[@name='allow_override']" position="after">
+        <label name="broker_fee"/>
+        <field name="broker_fee"/>
+    </xpath>
+</data>
