@@ -1,0 +1,6 @@
+<?xml version="1.0"?>
+<data>
+    <xpath expr="/form/notebook/page[@id='commissions']/field[@name='from_commissions']" position="after">
+        <field name="broker_fee_lines" colspan="4"/>
+    </xpath>
+</data>
