@@ -1,3 +1,4 @@
+* Add broker fee management
 * Automatic payment generation for broker based on configuration
 
 Version 1.3 - 2015-01-22
